# Hypixel-Skyblock-Tracker

./: .gitignore  ARCHITECTURE.md  New Text Document.bat  README.md  fileDump.ps1  package-lock.json  package.json
docs/: API_INTEGRATION.md  CRAFT_ALGORITHM.md  DATABASE_SCHEMA.md
public/: index.html  main.js  preload.js
src/: App.css  App.js  api.js  constants.js
src-tauri/: .taurignore  Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  icons.rs  main.rs
src-tauri/src/api/: hypixel.rs  hypixel_api.rs  mod.rs
src-tauri/src/commands/: collections.rs  config.rs  debug.rs  hypixel.rs  minions.rs  mod.rs  player.rs  profiles.rs  skills.rs
src-tauri/src/config/: loader.rs
src-tauri/src/models/: goal.rs  inventory.rs  player.rs  recipe.rs
src-tauri/src/utils/: cats_extractor.rs  craft_calculator.rs  item_icon_mapper.rs  mod.rs  pack_loader.rs  png_extractor.rs  validators.rs
src/components/: CollectionsPage.jsx  CraftPlanner.jsx  Dashboard.jsx  GoalTracker.jsx  InventoryView.jsx  MinionsPage.jsx  PlayerSearch.jsx  PlayerSearch.jsx.new  ProfileSelector.jsx  RecipeTracker.jsx
src/contexts/: ProfileContext.jsx
src/hooks/: useGoals.js  usePlayer.js  usePlayerSkills.js  useRecipes.js
src/pages/: CraftPlannerPage.jsx  HomePage.jsx  SettingsPage.jsx
src/services/: skyblockService.js
src/styles/: components.css  layout.css  theme.css
