[package]
name = "hypixel_tracker"
version = "0.1.0"
description = "A Hypixel Skyblock Tracker"
authors = ["Woodhead2001"]
edition = "2021"

[build]
beforeDevCommand = "npm run start"
beforeBuildCommand = "npm run react-build"
devPath = "http://localhost:3000"
frontendDist = "../build"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
