[package]
name = "hypixel_tracker"
version = "0.1.0"
description = "A Hypixel Skyblock Tracker"
authors = ["Woodhead2001"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-shell = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
